Add Transitions unit tests
CASMHMS-5467
